--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "next": "15.1.6",
@@ -27,7 +28,7 @@
     "lint-staged": "^15.4.3",
     "postcss": "^8",
     "prettier": "^3.5.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
   "lint-staged": {
