--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,20 @@
 {
-  "extends": ["next/core-web-vitals", "eslint:recommended", "plugin:prettier/recommended"],
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:prettier/recommended",
+    "plugin:storybook/recommended"
+  ],
   "rules": {
-    "prettier/prettier": ["error"],
-    "react/jsx-curly-brace-presence": ["error", { "props": "always", "children": "never" }]
+    "prettier/prettier": [
+      "error"
+    ],
+    "react/jsx-curly-brace-presence": [
+      "error",
+      {
+        "props": "always",
+        "children": "never"
+      }
+    ]
   }
 }
