--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/nextjs": "^8.5.5",
     "@storybook/react": "^8.5.5",
     "@storybook/test": "^8.5.5",
+    "@storybook/testing-library": "^0.2.1",
     "@types/node": "^20.17.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
